# django-for-apis

./: README.md  pyproject.toml
ch03/: manage.py
ch03/books/migrations/: 0001_initial.py
ch03/ch03/: settings.py  urls.py
ch04/: manage.py
ch04/apis/: serializers.py  tests.py  views.py
ch04/books/: tests.py  views.py
ch04/ch04/: asgi.py  settings.py  urls.py  wsgi.py
ch05/: manage.py
ch05/ch05/: asgi.py  settings.py  urls.py  wsgi.py
ch05/todos/: admin.py  serializers.py  tests.py  views.py
ch05/todos/migrations/: 0001_initial.py
ch06/: manage.py
ch06/accounts/: admin.py  forms.py
ch06/accounts/migrations/: 0001_initial.py
ch06/ch06/: asgi.py  settings.py  urls.py  wsgi.py
ch06/posts/: serializers.py
ch07/: manage.py
ch07/ch07/: asgi.py  settings.py  urls.py  wsgi.py
ch07/posts/: serializers.py  views.py
ch07/posts/migrations/: 0001_initial.py
ch08/: manage.py
ch08/accounts/: forms.py
ch08/accounts/migrations/: 0002_remove_customuser_name.py
ch08/ch08/: asgi.py  settings.py  urls.py  wsgi.py
ch08/posts/: views.py
ch09/: manage.py
ch09/ch09/: asgi.py  settings.py  urls.py  wsgi.py
ch09/posts/: models.py  serializers.py  views.py
ch10/: manage.py
ch10/accounts/: admin.py  forms.py
ch10/ch10/: asgi.py  settings.py  urls.py  wsgi.py
ch11/: manage.py
ch11/accounts/: admin.py
ch11/ch11/: asgi.py  settings.py  urls.py  wsgi.py
ch11/posts/: permissions.py  tests.py  urls.py
